crates/plurimus_widgets/tests/snapshots/text_input__wide_char_cursor.snap
---
source: crates/plurimus_ui/tests/text_input.rs
expression: composed_styled_frame(&app)
---
日本  
--
aaaaba
a: fg:Some(Yellow) bg:Some(Reset) mods:BOLD
b: fg:Some(Yellow) bg:Some(Reset) mods:BOLD | REVERSED
